2010-08-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-put-image): Use gnus-create-image to be
	XEmacs-compatible. 

	* nnslashdot.el: Removed this unused backend.

	* gnus-undo.el (gnus-undo-register-1): Limit the undo actions to 100
	actions. 
	(gnus-undo-register-1): Revert last change.

	* gnus-group.el (gnus-group-completing-read): Protect against not
	having completion-styles bound.

	* mml.el (mml-insert-mime-headers-always): Change the default to t, to
	make broken recipients happier.

	* gnus-html.el (gnus-html-put-image): Use gnus-put-image.

	* gnus-ems.el (gnus-put-image): Have gnus-put-image take an optional
	point parameter.

	* gnus-xmas.el (gnus-xmas-put-image): Ditto.

	* gnus-group.el (gnus-group-completing-read): Add 'substring to
	completion-styles for group selection.

2009-02-04  Andreas Schwab  <schwab@suse.de>

	* gnus-score.el (gnus-score-string): Fix regex for matching extra
	headers and regexp-quote the match if necessary.

2009-03-24  Miles Bader  <miles@gnu.org>

	* smiley.el (smiley-regexp-alist): Don't delete the semicolon before
	the blinking smiley.

2009-03-24  Simon Josefsson  <simon@josefsson.org>

	* smiley.el (smiley-regexp-alist): Disallow ;;) from being treated as a
	blink smiley.

2010-08-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-dribble-read-file): Ensure that the directory
	where the dribbel file lives exists.

	* message.el (message-send-mail-partially-limit): Change the default to
	nil, since most people don't want this.

	* mm-url.el (mm-url-decode-entities): Also decode entities like
	&#x3212.

2009-07-16  Kevin Ryde  <user42@zip.com.au>  (tiny change)

	* gnus-sum.el (gnus-summary-idna-message):
	* nnrss.el (nnrss-normalize-date, nnrss-discover-feed):
	Hyperlink urls in docstrings with URL `...'.

2010-08-29  Adam Sjøgren  <asjo@koldfront.dk>

	* gnus-html.el (gnus-html-put-image): Use XEmacs-compatible image
	functions.
