@@ -1,12 +1,13 @@
 2010-08-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-html.el (gnus-html-put-image): Use gnus-create-image to be
-	XEmacs-compatible. 
+	XEmacs-compatible.
+	(gnus-html-put-image): Don't do images on non-graphic displays.
 
 	* nnslashdot.el: Removed this unused backend.
 
 	* gnus-undo.el (gnus-undo-register-1): Limit the undo actions to 100
-	actions. 
+	actions.
 	(gnus-undo-register-1): Revert last change.
 
 	* gnus-group.el (gnus-group-completing-read): Protect against not
